<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Altitude</string>
    
    <string name="action_settings">Settings</string>
    
    <string name="barometer">Barometer</string>
    <string name="gps">GPS</string>
    
    <string name="atmospheric_pressure">Atmospheric Pressure</string>
    <string name="pressure_at_sea_level">Pressure At Sea Level (Standard)</string>
    <string name="custom_pressure_at_sea_level">Pressure At Sea Level (Local)</string>
    <string name="standard_altitude">Altitude (Standard)</string>
    <string name="local_altitude">Altitude (Local)</string>
    <string name="altitude">Altitude</string>
    
    <string name="default_value">--</string>
    
    <string name="err_msg">No data on pressure</string>
    
    <string name="settings_airport_id">Airport identifier</string>
    <string name="settings_airport_id_default_value">DME</string>
    <string name="settings_positive_btn">Save</string>
    <string name="settings_negative_btn">Cancel</string>

</resources>