<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:stretchColumns="*"
    tools:context=".AltitudeActivity" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header" >

        <TextView
            android:id="@+id/tvBarometerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/barometer"
            android:textColor="@color/android:white" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAtmosphericPressureTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atmospheric_pressure" />

        <TextView
            android:id="@+id/tvAtmosphericPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvPressureAtSeaLevelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_at_sea_level" />

        <TextView
            android:id="@+id/tvPressureAtSeaLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLocalPressureAtSeaLevelTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/custom_pressure_at_sea_level" />

        <TextView
            android:id="@+id/tvLocalPressureAtSeaLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAltitudeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standard_altitude" />

        <TextView
            android:id="@+id/tvAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvLocalAltitudeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/local_altitude" />

        <TextView
            android:id="@+id/tvLocalAltitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/header" >

        <TextView
            android:id="@+id/tvGPSTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/gps"
            android:textColor="@color/android:white" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/tvAltitudeGPSTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altitude" />

        <TextView
            android:id="@+id/tvAltitudeGPS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_value" />
    </TableRow>

</TableLayout>